--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "@greenrenge/gracefully",
   "version": "1.1.0",
   "description": "liveness and readiness wrapper using lightship for node.js",
-  "main": "dist/index.js",
+  "engines": {
+    "node": ">=18"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/esm/index.d.ts"
+    }
+  },
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "type": "module",
+  "types": "./dist/esm/index.d.ts",
   "homepage": "https://github.com/greenrenge/gracefully#readme",
   "scripts": {
-    "test": "node_modules/.bin/mocha 'test/**/*.test.js' --require @babel/register --require ./test/setup.js --exit",
-    "lint": "eslint .",
+    "test": "mocha",
+    "lint": "eslint . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
-    "build": "rimraf dist/** && babel src/ -d dist -s --plugins @babel/plugin-transform-modules-commonjs",
-    "prettify": "prettier --write '{playground,src,test}/**/*.js'",
+    "build": "npm run build:clean && npm run build:esm && npm run build:cjs",
+    "build:clean": "rimraf dist/**",
+    "build:esm": "tsc -p tsconfig.build-esm.json",
+    "build:cjs": "tsc -p tsconfig.build-cjs.json",
+    "prettify": "prettier --write '{playground,src,test}/**/*.{js,ts}'",
     "preplayground": "npm run build",
-    "playground": "node_modules/.bin/nodemon playground/index.js --watch playground --exec 'node_modules/.bin/babel-node'",
+    "playground": "node_modules/.bin/nodemon playground/index.js --watch playground --exec tsx",
     "version": "standard-changelog && git add CHANGELOG.md"
   },
   "husky": {
@@ -20,7 +36,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts}": [
       "eslint --fix",
       "git add"
     ]
@@ -40,37 +56,37 @@
   "author": "Kitthanat Srirussamee <greenrenge@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.24.0",
-    "@babel/core": "^7.24.0",
-    "@babel/node": "^7.24.0",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/register": "^7.24.0",
-    "babel-eslint": "^10.0.3",
-    "chai": "^4.2.0",
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/lodash": "^4.17.20",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.19",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "chai": "^4.4.1",
     "chai-as-promised": "^7.1.1",
     "chaid": "^1.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "express": "^4.17.1",
-    "lint-staged": "^10.0.3",
-    "lodash": "^4.17.15",
-    "mocha": "^11.7.1",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "sinon": "^8.1.1",
-    "sinon-chai": "^3.4.0",
-    "standard-changelog": "^2.0.21",
-    "std-mocks": "^1.0.1",
-    "supertest": "^4.0.2"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
+    "sinon": "^17.0.1",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.3.4",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.24.0",
-    "lightship": "^6.1.0"
+    "lightship": "^9.0.3"
   },
   "publishConfig": {
     "access": "public"
