chore: update package.json to include 'files' field and add prepublishOnly script

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "type": "module",
   "types": "./dist/esm/index.d.ts",
   "homepage": "https://github.com/greenrenge/gracefully#readme",
+  "files": [
+    "src",
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "test": "mocha",
     "lint": "eslint . --ext .js,.ts",
@@ -25,6 +30,7 @@
     "build:clean": "rimraf dist/**",
     "build:esm": "tsc -p tsconfig.build-esm.json",
     "build:cjs": "tsc -p tsconfig.build-cjs.json",
+    "prepublishOnly": "npm run build",
     "prettify": "prettier --write '{playground,src,test}/**/*.{js,ts}'",
     "preplayground": "npm run build",
     "playground": "node_modules/.bin/nodemon playground/index.js --watch playground --exec tsx",
