fix: update rootDir to 'src' and refine include paths in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"declarationMap": true,
 		"sourceMap": true,
 		"outDir": "dist",
-		"rootDir": ".",
+		"rootDir": "src",
 		"resolveJsonModule": true,
 		"noEmit": true,
 		"allowJs": true
@@ -29,9 +29,7 @@
 		}
 	},
 	"include": [
-		"src/**/*",
-		"test/**/*",
-		"playground/**/*"
+		"src/**/*"
 	],
 	"exclude": [
 		"node_modules",
